Add payment from Chuck Norris to Bity

--- a/index.html
+++ b/index.html
@@ -121,10 +121,9 @@ circle.node-circle-onchain, .node-text-balance {
                             { cmd: 'MOVE_BEADS', args: ['Bity', 'Puzzle', 2, null] },
                         ],
                         [
-                            'To emphasize the *network* in Lightning Network, let\'s interconnected the nodes that represent the Lightning Netowork with eachother themselves.',
-                            { cmd: 'ADD_CHANNEL', args: [{ source: 'LN1', sourceBalance: 2, target: 'LN2', targetBalance: 2 }] },
-                            { cmd: 'ADD_CHANNEL', args: [{ source: 'LN1', sourceBalance: 5, target: 'LN3', targetBalance: 2 }] },
-                            { cmd: 'ADD_CHANNEL', args: [{ source: 'LN2', sourceBalance: 4, target: 'LN3', targetBalance: 4 }] },
+                            'Chuck Norris pays Bity 3 Bitcoin.',
+			    { cmd: 'MOVE_BEADS', args: ['Chuck Norris', 'Puzzle', 3, null] },
+			    { cmd: 'MOVE_BEADS', args: ['Puzzle', 'Bity', 3, null] },
                         ],
                         [
                             'Let\'s add a couple of users.',
